--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-Amplitude",
+  "name": "react-native-amplitude",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,6 @@
   "author": "",
   "license": "",
   "peerDependencies": {
-    "react-native": ">=0.50.0",
-    "react-native-windows": ">=0.50.0"
+    "react-native": ">=0.50.0"
   }
 }
