--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,12 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
@@ -27,7 +28,11 @@ android {
 }
 
 repositories {
+    google()
+    mavenLocal()
     mavenCentral()
+    jcenter()
+
     maven {
         // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
         url "$rootDir/../node_modules/react-native/android"
